--- a/.github/worflows/deploy.yml
+++ b/.github/worflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         sudo apt-get install -y python3-pip
         pip3 install awsebcli --upgrade --user
         export PATH=$PATH:$HOME/.local/bin
-        
+
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
@@ -43,7 +43,6 @@ jobs:
     - name: Initialize Elastic Beanstalk Application
       run: |
         eb init -p docker churn-app --region eu-west-1
+        eb deploy --region eu-west-1
 
     - name: Deploy to Elastic Beanstalk
-      run: |
-        eb deploy churn-env
