--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,6 @@ jobs:
         pip3 install awsebcli --upgrade --user
         export PATH=$PATH:$HOME/.local/bin
 
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
@@ -38,11 +37,16 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t churn-app .
-      
+
     
+    - name: Run Tests in Docker
+      run: |
+        docker run churn-app pytest -v
+
     - name: Initialize Elastic Beanstalk Application
       run: |
         eb init -p docker churn-app --region eu-west-1
-        eb deploy --region eu-west-1
 
     - name: Deploy to Elastic Beanstalk
+      run: |
+        eb deploy churn-env
