--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CI/CD for Churn Prediction
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - train.py
 
@@ -36,16 +36,16 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t churn-app .
+        docker build -t mouhssine-churn .
 
     - name: Run Tests in Docker
       run: |
-        docker run --rm churn-app pytest -v || exit 1  # Assure que l'étape échoue si les tests échouent
+        docker run --rm mouhssine-churn pytest -v || exit 1  # Assure que l'étape échoue si les tests échouent
 
     - name: Initialize Elastic Beanstalk Application
       run: |
-        eb init -p docker churn-app --region eu-west-1
+        eb init -p docker mouhssine-churn --region eu-west-1
 
     - name: Deploy to Elastic Beanstalk
       run: |
-        eb deploy churn-env
+        eb deploy Mouhssine-churn-env
